Quick successive presses of same number key not registering with Bevel tool #72999

Closed
opened 2020-01-09 16:20:56 +01:00 by Ross McCafferty · 3 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4 [CURRENT STEAM VERSION]
Worked: (optional)

Short description of error
When using the Bevel tool, two or more of the same number cannot be entered quickly. For example, to achieve a bevel width of 0.001m, you must type 0.0, wait for a second, then type 01. If typing 0.001 in quick succession it will register as 0.01.

Typing 0.123 in quick succession will work fine though. Happens with both sets of number keys on the keyboard. Selecting the Width field and typing 0.001 after using the Bevel tool will work correctly.

This has been tried by multiple users on multiple machines/keyboards/Blender versions and the issue still exists. No other tool seems to show this issue.

Exact steps for others to reproduce the error

  1. Select Edge
  2. Hit Ctrl + B
  3. Type 0.001
  4. Observe width registering as 0.01
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` [CURRENT STEAM VERSION] Worked: (optional) **Short description of error** When using the Bevel tool, two or more of the same number cannot be entered quickly. For example, to achieve a bevel width of 0.001m, you must type 0.0, wait for a second, then type 01. If typing 0.001 in quick succession it will register as 0.01. Typing 0.123 in quick succession will work fine though. Happens with both sets of number keys on the keyboard. Selecting the Width field and typing 0.001 after using the Bevel tool will work correctly. This has been tried by multiple users on multiple machines/keyboards/Blender versions and the issue still exists. No other tool seems to show this issue. **Exact steps for others to reproduce the error** 1. Select Edge 2. Hit Ctrl + B 3. Type 0.001 4. Observe width registering as 0.01

Added subscriber: @RosscoMac

Added subscriber: @RosscoMac

This issue was referenced by 0920c1684b

This issue was referenced by 0920c1684b3138ab5857edb072285b1c800ca046

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-01-10 05:50:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72999
No description provided.